<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartContact</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contact_name">FirstName LastName</string>
    <string name="contact_nickname">(nickname)</string>
    <string name="phone_no">+6681-234-5678</string>
    <string name="tags">#.....</string>
    <string name="e_mail">Email: </string>
    <string name="e_mail_title">E-mail</string>
    <string name="address_title">Address</string>
    <string name="group_title">Group</string>
    <string name="add_field">Add Field</string>
    <string name="nocontact">No Contact Found</string>
    <string name="title_activity_detail_contact">title</string>
    <string name="title_activity_edit_contact">EditContactActivity</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="title_activity_filter_search">FilterSearch</string>
    <string name="radio1">DisplayName</string>
    <string name="radio2">Nickname</string>
    <string name="radio3">Phone Number</string>
    <string name="radio4">E-mail</string>
    <string name="radio5">Tags</string>

</resources>