<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pieronex.smartcontact.FilterSearch">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/title_activity_filter_search"
        android:textSize="30sp"/>



    <ToggleButton
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayname"
        android:textSize="20sp"
        android:layout_below="@id/header"/>

    <ToggleButton
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nickname"
        android:layout_below="@id/displayname"
        android:textSize="20sp"/>

    <ToggleButton
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phonenumber"
        android:layout_below="@id/nickname"
        android:textSize="20sp"/>

    <ToggleButton
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_filter"
        android:layout_below="@id/phonenumber"
        android:textSize="20sp"/>

    <ToggleButton
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tag"
        android:layout_below="@id/email_filter"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio2"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/nickname"
        android:layout_alignBottom="@+id/nickname"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio1"
        android:id="@+id/textView2"
        android:layout_toEndOf="@+id/header"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/displayname"
        android:layout_alignBaseline="@id/displayname"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio3"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/phonenumber"
        android:layout_alignBaseline="@id/phonenumber"
        android:layout_alignStart="@+id/textView2"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio4"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/email_filter"
        android:layout_alignBaseline="@id/email_filter"
        android:layout_alignStart="@+id/textView2"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio5"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/tag"
        android:layout_alignBaseline="@id/tag"
        android:layout_alignStart="@+id/textView4"
        android:textSize="20sp" />


</RelativeLayout>
